--- a/PriceCalculator/PriceCalculator.fsproj
+++ b/PriceCalculator/PriceCalculator.fsproj
@@ -49,7 +49,9 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
+    <Compile Include="Model.fs" />
     <Compile Include="PriceCalculator.fs" />
+    <Compile Include="PriceReportGenerator.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
