--- a/PriceCalculator/PriceCalculator.fsproj
+++ b/PriceCalculator/PriceCalculator.fsproj
@@ -53,11 +53,15 @@
     <Compile Include="PriceDefinition.fs" />
     <Compile Include="PriceCalculator.fs" />
     <Compile Include="PriceReportGenerator.fs" />
+    <Compile Include="Configuration.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
       <HintPath>..\packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="FSharp.Data">
+      <HintPath>..\packages\FSharp.Data.3.1.1\lib\net45\FSharp.Data.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
@@ -66,6 +70,7 @@
     <Reference Include="System.ValueTuple">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
